Crash: Divide By Zero with workbench depth of field when antialiasing disabled #75087

Closed
opened 2020-03-25 22:01:06 +01:00 by Floatharr · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.74

Blender Version
Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-21 20:58, hash: 9e8afa8817
Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-14 18:05, hash: a210b8297f
Worked: version: 2.83 (sub 7), branch: master, commit date: 2020-03-09 22:23, hash: fbe81db29a

Short description of error
Disabling antialiasing causes workbench depth of field to crash blender.

Exact steps for others to reproduce the error
With factory settings:

  1. Set Viewport Anti-Aliasing to "No Antialiasing"
  2. View -> Cameras -> Active Camera
  3. Enable Depth of Field in Viewport Shading
  4. Enable Camera Depth of Field in Active Camera Object Data Properties

c6jgCPksVI.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.74 **Blender Version** Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-21 20:58, hash: `9e8afa8817` Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-14 18:05, hash: `a210b8297f` Worked: version: 2.83 (sub 7), branch: master, commit date: 2020-03-09 22:23, hash: `fbe81db29a` **Short description of error** Disabling antialiasing causes workbench depth of field to crash blender. **Exact steps for others to reproduce the error** With factory settings: 1. Set Viewport Anti-Aliasing to "No Antialiasing" 2. View -> Cameras -> Active Camera 3. Enable Depth of Field in Viewport Shading 4. Enable Camera Depth of Field in Active Camera Object Data Properties [c6jgCPksVI.mp4](https://archive.blender.org/developer/F8428084/c6jgCPksVI.mp4)
Author

Added subscriber: @Floatharr

Added subscriber: @Floatharr

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

In float offset = wpd->taa_sample / wpd->taa_sample_len; the taa_sample_len is zero.

workbench_dof_cache_init(WORKBENCH_Data * vedata) Line 329	C
workbench_cache_init(void * ved) Line 96	C
drw_engines_cache_init() Line 963	C
DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1468	C
DRW_draw_view(const bContext * C) Line 1400	C
view3d_draw_view(const bContext * C, ARegion * region) Line 1603	C
view3d_main_region_draw(const bContext * C, ARegion * region) Line 1628	C
ED_region_do_draw(bContext * C, ARegion * region) Line 539	C
wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 669	C
wm_draw_window(bContext * C, wmWindow * win) Line 795	C
wm_draw_update(bContext * C) Line 997	C
WM_main(bContext * C) Line 454	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 526	C
In `float offset = wpd->taa_sample / wpd->taa_sample_len;` the `taa_sample_len` is zero. ``` workbench_dof_cache_init(WORKBENCH_Data * vedata) Line 329 C workbench_cache_init(void * ved) Line 96 C drw_engines_cache_init() Line 963 C DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1468 C DRW_draw_view(const bContext * C) Line 1400 C view3d_draw_view(const bContext * C, ARegion * region) Line 1603 C view3d_main_region_draw(const bContext * C, ARegion * region) Line 1628 C ED_region_do_draw(bContext * C, ARegion * region) Line 539 C wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 669 C wm_draw_window(bContext * C, wmWindow * win) Line 795 C wm_draw_update(bContext * C) Line 997 C WM_main(bContext * C) Line 454 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 526 C ```

Added subscribers: @fclem, @brecht

Added subscribers: @fclem, @brecht

@rjg, for a bug to be confirmed, it must also be tagged with the relevent module project, otherwise it's not fully triaged.

If it's high priority or likely caused by a recent change, CC the relevant developer as well.

@rjg, for a bug to be confirmed, it must also be tagged with the relevent module project, otherwise it's not fully triaged. If it's high priority or likely caused by a recent change, CC the relevant developer as well.

@brecht That was unintentional, I somehow forgot to tag the project.

The change was introduced by @fclem 's workbench refactor c476c36e40.

@brecht That was unintentional, I somehow forgot to tag the project. The change was introduced by @fclem 's workbench refactor c476c36e400883d929a7149def8dcb6ad6157a86.

This issue was referenced by a0437c3f73

This issue was referenced by a0437c3f730f14be83f8e6cb20432b3775ffd03f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-03-26 16:04:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75087
No description provided.