Fix T75087 Workbench: DoF: Divide By Zero when antialiasing is disabled